--- a/style.css
+++ b/style.css
@@ -302,6 +302,64 @@
   transform: scale(0.8);
 }
 
+.about {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 120px;
+  margin: 100px 0;
+}
+
+.about .card {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  position: relative;
+  width: 530px;
+  border-radius: 20px;
+  padding: 20px;
+  box-shadow: 0 0 20px #46a358;
+}
+
+.about .card img.flower {
+  position: relative;
+  z-index: -2;
+  width: 250px;
+}
+
+.about .card img.decoration {
+  position: absolute;
+  width: 620px;
+  left: -50px;
+  z-index: -1;
+}
+
+.about .card .des h1 {
+  font-size: 20px;
+  line-height: 100%;
+  color: #46a358;
+}
+
+.about .card .des p {
+  font-size: 14px;
+  line-height: 20px;
+  width: 250px;
+  margin: 10px 0;
+}
+
+.about .card .des button {
+  background: #46a358;
+  color: white;
+  border: 0;
+  padding: 6px 16px;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+
+.about .card .des button:active {
+  transform: scale(0.8);
+}
+
 @media (max-width: 768px) {
   .navbar {
     justify-content: space-between;
@@ -329,6 +387,34 @@
     font-size: 40px;
     line-height: 40px;
     width: 350px;
+  }
+
+  .products {
+    align-items: center;
+  }
+
+  .products .top {
+    gap: 7rem;
+  }
+
+  .products .middle {
+    grid-template-columns: repeat(2, 1fr);
+    justify-items: center;
+  }
+
+  .about {
+    justify-items: center;
+    gap: 0;
+  }
+
+  .about .card {
+    text-align: center;
+    flex-direction: column;
+    width: 250px;
+  }
+
+  .about .card img.decoration {
+    display: none;
   }
 }
 
@@ -379,5 +465,30 @@
 
   .home .right-side img:last-child {
     width: 300px;
+  }
+
+  .products .top {
+    flex-direction: column;
+    gap: 1rem;
+  }
+
+  .products .middle {
+    grid-template-columns: 1fr;
+  }
+
+  .about {
+    grid-template-columns: 1fr;
+    justify-items: center;
+    gap: 50px;
+  }
+
+  .about .card {
+    text-align: center;
+    flex-direction: column;
+    width: 250px;
+  }
+
+  .about .card img.decoration {
+    display: none;
   }
 }
